@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-28T16:24:54Z",
-  "count_outdated" : 419,
-  "uniques_outdated" : 241,
-  "count" : 445,
+  "timestamp" : "2022-07-29T01:25:57Z",
+  "count_outdated" : 422,
+  "uniques_outdated" : 242,
+  "count" : 447,
   "uniques" : 257,
   "clones" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-15T00:00:00Z",
       "count": 2,
